# telco-churn-mlops

./: .gitignore  Dockerfile  Makefile  README.md  case-study.md  pyproject.toml  requirements-mlops.txt  requirements.txt
.github/workflows/: ci.yml
configs/: pipeline.json
dashboard/: app.py
scripts/: run.ps1
src/telco_churn/: __init__.py  api.py  cli.py  config.py  data.py  features.py  monitoring.py  scoring.py  training.py  validation.py
tests/: test_data_validation.py  test_features.py  test_pipeline.py  test_public_safety.py
